# CMakePractice

./: CMakeLists.txt  getString.cpp  getString.h  hello.cpp
dlib/: CMakeLists.txt  dlib.h  dlib1.cpp  dlib2.cpp
slib/: CMakeLists.txt  slib.h  slib1.cpp  slib2.cpp
